--- a/src/app/shared/layout-components/header-one/header-one.component.html
+++ b/src/app/shared/layout-components/header-one/header-one.component.html
@@ -5,12 +5,12 @@
         <!-- sidebar-toggle-->
         <a class="logo-horizontal" href="index.html">
           <img
-            src="./assets/images/brand/logo.png"
+            src="https://cdn.discordapp.com/attachments/733805519617130506/1178127139413958666/Logo_JatunAyllu2.png?ex=65750366&is=65628e66&hm=9ef601f81b6e4359ff877ce3f1a55620af1b0c5785e58f67c266ce8c490e7ac9&"
             class="header-brand-img desktop-logo"
             alt="logo"
           />
           <img
-            src="./assets/images/brand/logo-3.png"
+            src="https://cdn.discordapp.com/attachments/733805519617130506/1178127139413958666/Logo_JatunAyllu2.png?ex=65750366&is=65628e66&hm=9ef601f81b6e4359ff877ce3f1a55620af1b0c5785e58f67c266ce8c490e7ac9&"
             class="header-brand-img light-logo1"
             alt="logo"
           />
