--- a/src/app/shared/layout-components/sidebar/sidebar.component.html
+++ b/src/app/shared/layout-components/sidebar/sidebar.component.html
@@ -7,8 +7,19 @@
     [ngClass]="{ 'fixed-header visible-title': scrolled }"
   >
     <div class="side-header">
-      <a class="header-brand1" routerLink="/dashboard">
+      <a class="header-brand1" routerLink="/dashboard" style="display: flex; justify-content: center;">
         <img
+          src="https://cdn.discordapp.com/attachments/733805519617130506/1178127139413958666/Logo_JatunAyllu2.png?ex=65750366&is=65628e66&hm=9ef601f81b6e4359ff877ce3f1a55620af1b0c5785e58f67c266ce8c490e7ac9&"
+          class="header-brand-img light-logo"
+          alt="NoaLogo"
+        />
+        <img
+          src="https://cdn.discordapp.com/attachments/733805519617130506/1178127139413958666/Logo_JatunAyllu2.png?ex=65750366&is=65628e66&hm=9ef601f81b6e4359ff877ce3f1a55620af1b0c5785e58f67c266ce8c490e7ac9&"
+          class="header-brand-img light-logo1"
+          style="width: 30%;"
+          alt="NoaLogo"
+        />
+        <!-- <img
           src="./assets/images/brand/logo.png"
           class="header-brand-img desktop-logo"
           alt="NoaLogo"
@@ -27,7 +38,7 @@
           src="./assets/images/brand/logo-3.png"
           class="header-brand-img light-logo1"
           alt="NoaLogo"
-        />
+        /> -->
       </a>
     </div>
     <perfect-scrollbar>
@@ -47,12 +58,15 @@
           </svg>
         </div>
         <ul class="side-menu">
+          <!--logout-->
+          <li class="sub-category">
+            <h3>INICIO</h3>
+          </li>
           <!-- 1st Level Menu -->
           <div *ngIf="show" >
             <li *ngFor="let menuItem of menuItems" [ngClass]="{ 'sub-category': menuItem.headTitle,
               slide: menuItem.title, active: menuItem.selected, 'is-expanded': menuItem.active}">
               <h3 *ngIf="menuItem.headTitle">{{ menuItem.headTitle }}</h3>
-
               <!-- has-Link -->
               <a
                 class="side-menu__item has__link"
