--- a/src/app/shared/layout-components/header/header.component.html
+++ b/src/app/shared/layout-components/header/header.component.html
@@ -121,7 +121,7 @@
                     </div>
                   </div>
                   <div class="dropdown-divider m-0"></div>
-                  <a ngbDropdownItem class="dropdown-item"  routerLink="/panel/perfil">
+                  <a ngbDropdownItem class="dropdown-item" routerLink="/panel/perfil">
                     <i class="dropdown-icon fe fe-user"></i> Perfil
                   </a>
                   <!-- <a ngbDropdownItem class="dropdown-item"  routerLink="/pages/mail-indox">
@@ -133,7 +133,7 @@
                   <a ngbDropdownItem class="dropdown-item"  routerLink="/custompages/lockscreen">
                     <i class="dropdown-icon fe fe-lock"></i> Lockscreen
                   </a> -->
-                  <a ngbDropdownItem (click)="signout()" class="dropdown-item">
+                  <a href="javascript:void(0);" ngbDropdownItem (click)="signout()" class="dropdown-item">
                     <i class="dropdown-icon fe fe-alert-circle"></i> Salir
                   </a>
                 </div>
