--- a/src/app/panel/pages/perfil/perfil.component.scss
+++ b/src/app/panel/pages/perfil/perfil.component.scss
@@ -1,8 +1,9 @@
 ::ng-deep{
     .profile-cover__action{
-      background : url('https://i.blogs.es/a42497/south-america-8k-timelapse/1366_2000.jpg')  no-repeat  center center / cover !important
+      background : url('https://cdn.discordapp.com/attachments/1011378535186845790/1179856058345328650/coverrrr_1.png?ex=657b4d94&is=6568d894&hm=18ccc75c73ae3142c4eff74dd43fa49055a3c5f1d61564c9b422b1dbb6a29a78&')  no-repeat  center center / cover !important
     }
   }
+
   ::ng-deep {
     #ng-select-sash{
         width: 90%;
