--- a/src/assets/colors/color1.css
+++ b/src/assets/colors/color1.css
@@ -424,7 +424,7 @@ a.text-primary:focus {
 
 .login-img {
     position: relative;
-    background-image: url(https://cdn.discordapp.com/attachments/1011378535186845790/1179853449488257154/paisaje-montana-al-aire-libre-famoso-pico-senderismo-aventura-generativa-ai_1.jpg?ex=657b4b26&is=6568d626&hm=369431fe7a07b73a604da2f6030f28dbd357902e81277a9809864c8c7dfb50f5&);
+    background-image: url(https://jatun-files.s3.amazonaws.com/Panel/login_machuPicchu.jpg);
     /* background-image: url(../images/media/bg2.jpg); */
 }
 
