--- a/src/app/authentication/pages/recover-password/recover-password.component.html
+++ b/src/app/authentication/pages/recover-password/recover-password.component.html
@@ -10,7 +10,7 @@
                                     <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
                                         <li ngbNavItem="Firebase">
                                             <a ngbNavLink>
-                                                <img src="https://cdn.discordapp.com/attachments/733805519617130506/1178127139413958666/Logo_JatunAyllu2.png?ex=65750366&is=65628e66&hm=9ef601f81b6e4359ff877ce3f1a55620af1b0c5785e58f67c266ce8c490e7ac9&" alt="">
+                                                <img src="https://jatun-files.s3.amazonaws.com/Panel/Logo_JatunAyllu2+oficial.png" alt="">
                                             </a>
                                             <ng-template ngbNavContent>
                                                 <form [formGroup]="loginForm" (ngSubmit)="login()">
