--- a/src/app/panel/pages/dashboard/dashboard.component.html
+++ b/src/app/panel/pages/dashboard/dashboard.component.html
@@ -7,6 +7,66 @@
         </ol> 
     </div>
 </div>
+
+<!-- ROW OPEN  *ngIf="group_name=='AFILIADO'" -->
+<div class="row">
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card bg-dark img-card box-dark-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">MASTER</h2>
+                        <p class="text-white mb-0">Rango</p>
+                    </div>
+                    <div class="ms-auto"> <img src="https://cdn.discordapp.com/attachments/1011378535186845790/1179917444937175111/50.png?ex=657b86c0&is=656911c0&hm=8a0523457c9a2f34a9834a43d619212004f14713b1739b9d4c6657406d3b9095&" alt=""> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- COL END -->
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card bg-secondary img-card box-secondary-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">86,964</h2>
+                        <p class="text-white mb-0">N° Afiliados</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- COL END -->
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card  bg-success img-card box-success-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">98</h2>
+                        <p class="text-white mb-0">Directos</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- COL END -->
+    <div class="col-sm-12 col-md-3 col-lg-3">
+        <div class="card bg-info img-card box-info-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">893</h2>
+                        <p class="text-white mb-0">N° Reconsumos</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- COL END -->
+</div>
 <div class="row my-5">
     <div class="col-sm-12 col-md-4 col-lg-4"></div>
     <div class="col-sm-12 col-md-4 col-lg-4">
