--- a/src/app/shared/layout-components/header/header.component.html
+++ b/src/app/shared/layout-components/header/header.component.html
@@ -87,12 +87,12 @@
                 </a>
               </div>
               <!-- COUNTRY -->
-              <div class="d-flex country">
+              <!-- <div class="d-flex country">
                 <a class="nav-link icon theme-layout nav-link-bg layout-setting" appToggleTheme>
                   <span class="dark-layout"><i class="fe fe-moon"></i></span>
                   <span class="light-layout"><i class="fe fe-sun"></i></span>
                 </a>
-              </div>
+              </div> -->
               <!-- Theme-Layout -->
               <div ngbDropdown class="dropdown d-flex profile-1" *ngIf="profile">
                 <a ngbDropdownToggle
@@ -117,7 +117,7 @@
                       <h5 class="text-dark mb-0 fs-14 fw-semibold text-capitalize">
                         {{userName}}
                       </h5>
-                      <small class="text-muted"> {{profile.email}}</small>
+                      <small class="text-muted"> {{group_name}}</small>
                     </div>
                   </div>
                   <div class="dropdown-divider m-0"></div>
