--- a/src/app/shared/layout-components/sidebar/sidebar.component.html
+++ b/src/app/shared/layout-components/sidebar/sidebar.component.html
@@ -9,12 +9,12 @@
     <div class="side-header">
       <a class="header-brand1" routerLink="/dashboard" style="display: flex; justify-content: center;">
         <img
-          src="https://cdn.discordapp.com/attachments/733805519617130506/1178127139413958666/Logo_JatunAyllu2.png?ex=65750366&is=65628e66&hm=9ef601f81b6e4359ff877ce3f1a55620af1b0c5785e58f67c266ce8c490e7ac9&"
+          src="https://jatun-files.s3.amazonaws.com/Panel/Logo_JatunAyllu2+oficial.png"
           class="header-brand-img light-logo"
           alt="NoaLogo"
         />
         <img
-          src="https://cdn.discordapp.com/attachments/733805519617130506/1178127139413958666/Logo_JatunAyllu2.png?ex=65750366&is=65628e66&hm=9ef601f81b6e4359ff877ce3f1a55620af1b0c5785e58f67c266ce8c490e7ac9&"
+          src="https://jatun-files.s3.amazonaws.com/Panel/Logo_JatunAyllu2+oficial.png"
           class="header-brand-img light-logo1"
           style="width: 30%;"
           alt="NoaLogo"
