--- a/src/app/administrador/pages/list-todos/list-todos.component.html
+++ b/src/app/administrador/pages/list-todos/list-todos.component.html
@@ -61,10 +61,10 @@
                             {{valClientes.data_referido.email}}
                         </td>
                         <td class="text-center text-dark">
-                            {{valClientes.data_referido.email}}
+                            {{valClientes.pack.name}}
                         </td>
                         <td class="text-center text-dark">
-                            {{valClientes.banco_id}}
+                            {{valClientes.banco.name}}
                         </td>
                         <td class="text-center text-dark">
                             {{valClientes.numero_operacion}}
