--- a/src/app/panel/pages/dashboard/dashboard.component.html
+++ b/src/app/panel/pages/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
 
 <!-- ROW OPEN  *ngIf="group_name=='AFILIADO'" -->
 <div class="row">
-    <div class="col-sm-12 col-md-3 col-lg-3">
+    <div class="col-sm-12 col-md-2 col-lg-2">
         <div class="card bg-dark img-card box-dark-shadow">
             <div class="card-body">
                 <div class="d-flex">
@@ -24,12 +24,12 @@
         </div>
     </div>
     <!-- COL END -->
-    <div class="col-sm-12 col-md-3 col-lg-3">
+    <div class="col-sm-12 col-md-2 col-lg-2">
         <div class="card bg-secondary img-card box-secondary-shadow">
             <div class="card-body">
                 <div class="d-flex">
                     <div class="text-white">
-                        <h2 class="mb-0 number-font">86,964</h2>
+                        <h2 class="mb-0 number-font">10</h2>
                         <p class="text-white mb-0">N° Afiliados</p>
                     </div>
                     <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
@@ -38,7 +38,7 @@
         </div>
     </div>
     <!-- COL END -->
-    <div class="col-sm-12 col-md-3 col-lg-3">
+    <div class="col-sm-12 col-md-2 col-lg-2">
         <div class="card  bg-success img-card box-success-shadow">
             <div class="card-body">
                 <div class="d-flex">
@@ -52,13 +52,41 @@
         </div>
     </div>
     <!-- COL END -->
-    <div class="col-sm-12 col-md-3 col-lg-3">
+    <div class="col-sm-12 col-md-2 col-lg-2">
         <div class="card bg-info img-card box-info-shadow">
             <div class="card-body">
                 <div class="d-flex">
                     <div class="text-white">
                         <h2 class="mb-0 number-font">893</h2>
                         <p class="text-white mb-0">N° Reconsumos</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- COL END -->
+    <div class="col-sm-12 col-md-2 col-lg-2">
+        <div class="card bg-warning img-card box-info-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">S/ 0.00</h2>
+                        <p class="text-white mb-0">Comisiones Mes</p>
+                    </div>
+                    <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- COL END -->
+    <div class="col-sm-12 col-md-2 col-lg-2">
+        <div class="card bg-danger img-card box-info-shadow">
+            <div class="card-body">
+                <div class="d-flex">
+                    <div class="text-white">
+                        <h2 class="mb-0 number-font">S/ 0.00</h2>
+                        <p class="text-white mb-0">Comision Acumulado</p>
                     </div>
                     <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
                 </div>
