--- a/src/app/shared/layout-components/sidebar/sidebar.component.html
+++ b/src/app/shared/layout-components/sidebar/sidebar.component.html
@@ -59,9 +59,9 @@
         </div>
         <ul class="side-menu">
           <!--logout-->
-          <li class="sub-category">
+          <!-- <li class="sub-category">
             <h3>INICIO</h3>
-          </li>
+          </li> -->
           <!-- 1st Level Menu -->
           <div *ngIf="show" >
             <li *ngFor="let menuItem of menuItems" [ngClass]="{ 'sub-category': menuItem.headTitle,
