--- a/src/app/panel/pages/referidos/referidos.component.html
+++ b/src/app/panel/pages/referidos/referidos.component.html
@@ -92,7 +92,7 @@
                     <div class="card-body">
                         <h2>Añade un amigo</h2>
                         <form [formGroup]="formRegister" class="row">
-                            <div class="col-lg-7 col-md-7 col-sm-12">
+                            <div class="col-lg-5 col-md-5 col-sm-12">
                                 <div class="form-group">
                                     <ng-select formControlName="pais"
                                             [items]="pais"
@@ -115,7 +115,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-lg-2 col-md-2 col-sm-12">
+                                <div class="form-group">
+                                    <ng-select formControlName="genero"
+                                            [items]="genero"
+                                            bindLabel="name"
+                                            bindValue="name"
+                                            placeholder="GENERO*">
+                                    </ng-select>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12">
                                 <div class="form-group">
                                     <div class="input-group">
                                         <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
@@ -126,7 +136,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
+                            <div class="col-lg-4 col-md-4 col-sm-12">
                                 <div class="form-group">
                                     <div class="input-group">
                                         <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
@@ -134,6 +144,17 @@
                                         </a>
                                         <input autocomplete="off" class="form-control" type="text" formControlName="apellidos"
                                             placeholder="APELLIDOS" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                                            <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        </a>
+                                        <input autocomplete="off" class="form-control" type="date" formControlName="fecha_nac"
+                                            required  placement="top" ngbTooltip="Fecha Nacimiento">
                                     </div>
                                 </div>
                             </div>
@@ -167,6 +188,49 @@
                                         </a>
                                         <input autocomplete="off" class="form-control" placeholder="CELULAR"
                                            formControlName="celular" maxlength="9" onkeyup="if (/\D/g.test(this.value)) this.value = this.value.replace(/\D/g,'')" >
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                                <div class="form-group">
+                                    <ng-select formControlName="departamento"
+                                            [items]="departamento"
+                                            bindLabel="name"
+                                            bindValue="id_dep"
+                                            placeholder="SELECCIONAR DEPARTAMENTO*"
+                                            (change)="selectDepartamento($event)">
+                                    </ng-select>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                                <div class="form-group">
+                                    <ng-select formControlName="provincia"
+                                            [items]="provincia"
+                                            bindLabel="name"
+                                            bindValue="id_pro"
+                                            placeholder="SELECCIONAR PROVINCIA*"
+                                            (change)="selectProvincia($event)">
+                                    </ng-select>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-12">
+                                <div class="form-group">
+                                    <ng-select formControlName="distrito"
+                                            [items]="distrito"
+                                            bindLabel="name"
+                                            bindValue="id_dist"
+                                            placeholder="SELECCIONAR DISTRITO*">
+                                    </ng-select>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <a href="javascript:void(0)" class="input-group-text bg-white text-muted">
+                                            <i class="fa fa-map-marker " aria-hidden="true"></i>
+                                        </a>
+                                        <input autocomplete="off" class="form-control" placeholder="DIRECCION"
+                                           formControlName="direccion">
                                     </div>
                                 </div>
                             </div>
@@ -308,28 +372,6 @@
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
             <hr>
             <button class="btn btn-danger" (click)="closeModal()"> Cerrar</button>
-        </div>
-    </div>
-</ng-template>
-<!-- Modal finalizar -->
-<ng-template #modal_binance let-modal>
-    <div class="modal-body row">
-        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-            <h5>Finalizar Registro</h5>
-            <hr>
-        </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-            <a href="{{data_binance.data.qrcodeLink}}" target="_blank">
-                <img src="{{data_binance.data.qrcodeLink}}" alt=""></a>
-            <br>
-            <a href="javascript:void(0)" (click)="copiarLink()">
-                <!-- {{data_binance.data.checkoutUrl}} -->
-                Copiar Link
-            </a>
-        </div>
-        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-            <hr>
-            <button class="btn btn-danger" (click)="closeModalBinance()"> Cerrar</button>
         </div>
     </div>
 </ng-template>
