--- a/src/app/panel/pages/dashboard/dashboard.component.html
+++ b/src/app/panel/pages/dashboard/dashboard.component.html
@@ -72,7 +72,7 @@
                 <div class="d-flex">
                     <div class="text-white">
                         <h2 class="mb-0 number-font">S/ 0.00</h2>
-                        <p class="text-white mb-0">Comisiones Mes</p>
+                        <p class="text-white mb-0">Comision Mes</p>
                     </div>
                     <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
                 </div>
@@ -86,7 +86,7 @@
                 <div class="d-flex">
                     <div class="text-white">
                         <h2 class="mb-0 number-font">S/ 0.00</h2>
-                        <p class="text-white mb-0">Comision Acumulado</p>
+                        <p class="text-white mb-0">C. Acumulado</p>
                     </div>
                     <div class="ms-auto"> <i class="fa fa-user-o text-white fs-30 me-2 mt-2"></i> </div>
                 </div>
