--- a/src/app/almacen/pages/productos/productos.component.html
+++ b/src/app/almacen/pages/productos/productos.component.html
@@ -10,7 +10,7 @@
 </div>
 <div class="card">
     <div class="card-header">
-        LISTAR PRODUCTOS
+        ENTREGA PRODUCTOS REFERIDOS
     </div>
     <form [formGroup]="formfiltros" class="card-body row">
         <div class="col-md-12 col-sm-12 col-lg-3 mb-2">
@@ -27,77 +27,23 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12">
-            <!--TABLA-->
             <div class="table-responsive invoice-table" id="table">
-                <table class="table table-striped table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
-                    <thead>
-                    <tr>
-                        <th class="text-center">CLIENTE</th>
-                        <th class="text-center">DOCUMENTO</th>
-                        <th class="text-center">CELULAR</th>
-                        <th class="text-center">CORREO</th>
-                        <th class="text-center">PACK</th>
-                        <th class="text-center">BANCO</th>
-                        <th class="text-center">N° OPERACIÓN</th>
-                        <th class="text-center">IMPORTE</th>
-                        <th class="text-center">F. Voucher</th>
-                        <th class="text-center">PATROCINADOR</th>
-                        <th class="text-center">REGISTRO</th>
-                        <th class="text-center">ACC</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr *ngFor="let valClientes of clientes">
-                        <td class="text-center text-dark">
-                            {{valClientes.data_referido.nombre}} {{valClientes.data_referido.apellido}}
-                        </td>
-                        <td class="text-center text-dark">
-                            {{valClientes.data_referido.dni}}
-                        </td>
-                        <td class="text-center text-dark">
-                            {{valClientes.data_referido.telefono}}
-                        </td>
-                        <td class="text-center text-dark">
-                            {{valClientes.data_referido.email}}
-                        </td>
-                        <td class="text-center text-dark">
-                            {{valClientes.pack.name}}
-                        </td>
-                        <td class="text-center text-dark">
-                            {{valClientes.banco.name}}
-                        </td>
-                        <td class="text-center text-dark">
-                            {{valClientes.numero_operacion}}
-                        </td>
-                        <td class="text-center text-dark">
-                            S/ {{valClientes.importe}}
-                        </td>
-                        <td class="text-center text-dark">
-                            {{valClientes.fecha_pago | date:'d/M/yyyy'}}
-                        </td>
-                        <td class="text-center text-dark">
-                            <div *ngIf="valClientes.patrocinador!=null">
-                                {{valClientes.patrocinador.name}}
-                            </div>
-                            <div *ngIf="valClientes.patrocinador==null">
-                                Sin Patrocinador
-                            </div>
-                        </td>
-                        <td class="text-center text-dark text-capitalize">
-                            {{valClientes.created_at | date:'d/M/yyyy'}}
-                        </td>
-                        <td class="text-center">
-                            <a href="javascript:void(0);" (click)="openModalIMG(valClientes)"><i class="fa fa-eye"></i></a>
-                            <a class="mx-2" href="javascript:void(0);" (click)="cambiarEstado(valClientes)" *ngIf="valClientes.estado.id==2">
-                                <i class="fa fa-file-text" aria-hidden="true"></i>
-                            </a>
-                            <p *ngIf="valClientes.estado.id!=2">
-                                ¡ Sin Acciones !
-                            </p>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
+                <ng-template #idTpl let-rowIndex="rowIndex" let-row="row">
+                    {{rowIndex+1}}
+                </ng-template>
+                <ng-template #is_estado let-data="adtData" let-emitter="captureEvents">
+                    <p *ngIf="data.estado">
+                    <span class="badge bg-warning p-1" *ngIf="data.estado.name=='PENDIENTE'">{{data.estado.name}}</span>
+                    </p>
+                    <p *ngIf="!data.estado">
+                    <span class="badge bg-light text-dark p-1">Sin Estado</span>
+                    </p>
+                </ng-template>
+                <ng-template #dtActions let-data="adtData" let-emitter="captureEvents">
+                    <app-buttons-table-productos [actions]="dataTableActions" [data]="data" (emitter)="emitter($event)"></app-buttons-table-productos>
+                </ng-template>
+                <table id="material--template-dt" datatable *ngIf="columns.length" [dtOptions]="dtOptions"
+                    style="width: 100%;" [dtTrigger]="dtTrigger"></table>
             </div>
         </div>
     </form>
@@ -115,6 +61,50 @@
         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
             <hr>
             <button class="btn btn-danger" (click)="closeModalIMG()"> Cerrar</button>
+        </div>
+    </div>
+</ng-template>
+<!-- Modal IMG -->
+<ng-template #modal_estado let-modal>
+    <div class="modal-body row">
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <h5>CLIENTE: {{data_detalle.data_referido.nombre}} {{data_detalle.data_referido.apellido}} <br><br>
+                PRODUCTOS A RECOGER: {{data_detalle.pack.cantidad_productos}}</h5>
+            <hr>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center" *ngFor="let data of productos">
+            <div class="card" style="border: 1px solid rgb(206, 206, 206) !important;">
+                <div class="row" style="margin:2% 2% 2% 2%">
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center">
+                        <img src="{{data.url_img}}" alt="" style="width: 35%;">
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center d-flex align-items-center" style="border-left: 1px solid rgb(206, 206, 206);">
+                        <h5>{{data.nombre}}</h5>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 text-center d-flex align-items-center" style="border-left: 1px solid rgb(206, 206, 206);">
+                        <input type="number" [id]="data.id" class="form-control" value="0" 
+                            (keyup)="getCantidad($event, data)" (change)="getCantidad($event, data)">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <div class="card" style="border: 1px solid rgb(206, 206, 206) !important;">
+                <div class="row" style="margin:2% 2% 2% 2%">
+                    <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+                        <p>CANTIDAD</p>
+                        <p>{{total_cantidad}}</p>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12 text-center" style="border-left: 1px solid rgb(206, 206, 206);">
+                        <br>
+                        <button class="btn btn-outline-primary" (click)="actEstado()"  [disabled]="!validar_entrega">Entregar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <hr>
+            <button class="btn btn-danger" (click)="closeModalEstado()"> Cerrar</button>
         </div>
     </div>
 </ng-template>
