--- a/src/app/panel/pages/comisiones/comisiones.component.html
+++ b/src/app/panel/pages/comisiones/comisiones.component.html
@@ -1,1 +1,63 @@
-<p>comisiones works!</p>
+<div class="page-header">
+    <h1 class="page-title my-auto">Jatun Ayllu</h1>
+    <div>
+        <ol class="breadcrumb mb-0">
+            <li class="breadcrumb-item"> <a href="javascript:void(0)"><i class="fe fe-home"></i></a></li> 
+            <li class="breadcrumb-item"> <a href="javascript:void(0)">Dashboard</a></li>
+            <li class="breadcrumb-item active" aria-current="page">H. Reconsumo</li>
+        </ol> 
+    </div>
+</div>
+<div class="card">
+    <div class="card-header">
+        COMISIONES
+    </div>
+    <div class="card-body row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <!--TABLA-->
+            <div class="table-responsive invoice-table" id="table">
+              <table class="table table-striped table-bordered" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+                <thead>
+                <tr>
+                    <th class="text-center">NOMBRES Y APELLIDOS</th>
+                    <th class="text-center">IMPORTE</th>
+                    <th class="text-center">N° PRODUCTOS</th>
+                    <th class="text-center">GANANCIAS</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let valComisiones of comisiones">
+                    <!-- <td class="text-center text-dark text-capitalize">
+                        {{ordenes.created_at | date:'dd/MM/yyyy'}}
+                    </td> -->
+                    <td class="text-center text-dark">
+                        {{valComisiones.nombre}} {{valComisiones.apellido}}
+                    </td>
+                    <td class="text-center text-dark">
+                        <div *ngIf="valComisiones.importe">
+                            <p>{{+valComisiones.importe}}</p>
+                        </div>
+                        <div *ngIf="!valComisiones.importe">
+                            <p>Sin Importe</p>
+                        </div>
+                    </td>
+                    <td class="text-center text-dark">
+                        <div *ngIf="valComisiones.cantidad_products">
+                            <p>{{+valComisiones.cantidad_products}}</p>
+                        </div>
+                        <div *ngIf="!valComisiones.cantidad_products">
+                            <p>Sin Productos</p>
+                        </div>
+                    </td>
+                    <td class="text-center text-dark text-lowercase">
+                        S/ {{(+valComisiones.ganancias).toFixed(2)}}
+                    </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- SPINNER -->
+<ngx-spinner type="timer"></ngx-spinner>
