--- a/src/app/panel/pages/reconsumo/reconsumo.component.html
+++ b/src/app/panel/pages/reconsumo/reconsumo.component.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-12 text-center">
                             <p>CANTIDAD</p>
-                            <input type="number" [id]="data.id" class="form-control" value="0" (change)="getCantidad($event, data)">
+                            <input type="number" [id]="data.id" class="form-control" value="0" (keyup)="getCantidad($event, data)" (change)="getCantidad($event, data)">
                             <!-- <p>{{data.cantidad}}</p> -->
                         </div>
                     </div>
@@ -80,7 +80,8 @@
                         </div>
                         <div class="col-lg-1 col-md-1 col-sm-12 text-center">
                             <br>
-                            <button class="btn btn-outline-primary">Pedir</button>
+                            <button class="btn btn-outline-primary" (click)="subirIMG()" [disabled]="!formPass.valid" 
+                                *ngIf="files.length>0">Pedir</button>
                         </div>
                     </form>
                 </div>
@@ -89,5 +90,64 @@
     </div>
     <div class="col-lg-1 col-md-1 col-sm-12"></div>
 </div>
+<div class="card">
+    <div class="card-header">
+        RECONSUMO DEL MES
+    </div>
+    <form [formGroup]="formfiltros" class="card-body row">
+        <div class="col-md-12 col-sm-12 col-lg-3 mb-2">
+            <div class="form-group">
+            <small class="form-label"><b>Filtrar Estado</b></small>
+            <ng-select class="text-uppercase"
+                        formControlName="estados"
+                        [items]="estados"
+                        bindLabel="name"
+                        bindValue="id"
+                        placeholder="SELECCIONAR ESTADO"
+                        (change)="selectEstado($event)">
+            </ng-select>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <div class="table-responsive invoice-table" id="table">
+                <ng-template #idTpl let-rowIndex="rowIndex" let-row="row">
+                    {{rowIndex+1}}
+                </ng-template>
+                <ng-template #is_estado let-data="adtData" let-emitter="captureEvents">
+                    <p *ngIf="data.estado">
+                        <span class="badge bg-warning p-1" *ngIf="data.estado.name=='PENDIENTE'">{{data.estado.name}}</span>
+                        <span class="badge bg-danger p-1" *ngIf="data.estado.name=='ANULADO'">{{data.estado.name}}</span>
+                        <span class="badge bg-success p-1" *ngIf="data.estado.name=='APROBADO'">{{data.estado.name}}</span>
+                        <span class="badge bg-success p-1" *ngIf="data.estado.name=='ENTREGADO'">{{data.estado.name}}</span>
+                    </p>
+                    <p *ngIf="!data.estado">
+                        <span class="badge bg-light text-dark p-1">Sin Estado</span>
+                    </p>
+                </ng-template>
+                <ng-template #dtActions let-data="adtData" let-emitter="captureEvents">
+                    <app-buttons-table-reconsumo [actions]="dataTableActions" [data]="data" (emitter)="emitter($event)"></app-buttons-table-reconsumo>
+                </ng-template>
+                <table id="material--template-dt" datatable *ngIf="columns.length"  [dtOptions]="dtOptions"
+                style="width: 100%;" [dtTrigger]="dtTrigger"></table>
+            </div>
+        </div>
+    </form>
+</div>
+<!-- Modal IMG -->
+<ng-template #modal_img let-modal>
+    <div class="modal-body row">
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <h5>Imagen Comprobante {{data_detalle.cliente.id}} {{data_detalle.cliente.id}}</h5>
+            <hr>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+           <img src="{{data_detalle.url_voucher}}" alt="#" style="width: 100%;">
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 text-center">
+            <hr>
+            <button class="btn btn-danger" (click)="closeModalIMG()"> Cerrar</button>
+        </div>
+    </div>
+</ng-template>
 <!-- SPINNER -->
 <ngx-spinner type="timer"></ngx-spinner>
